<resources>
    <string name="app_name">News</string>
    <string name="search">Search</string>
    <string name="search_hint">What</string>

    <string name="title">Title</string>
    <string name="author">Author : %1$s</string>
    <string name="name_source">Source : %1$s</string>
    <string name="description">Description</string>
    <string name="image">Photo</string>
    <string name="publish">Publish : %1$s</string>
</resources>